--- a/assets/scss/components/_list-group.scss
+++ b/assets/scss/components/_list-group.scss
@@ -13,7 +13,9 @@
 .list-box-check {
 	li{
 		position: relative;
-		padding: 5px 5px 5px 30px;
+    padding-block: 5px;
+    padding-inline-end: 5px;
+    padding-inline-start: 30px;
 		font-family: var(--font-family-base);
 		font-size: 16px;
 		
@@ -22,7 +24,7 @@
 		}
 		&:before{
 			position: absolute;
-			#{$dz-pos-left}: 0;
+			inset-inline-start: 0;
 			top: 8px;
 			font-family: "Font Awesome 5 Free";
 			font-weight: 900;
